--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <head>
+  <link rel="stylesheet" href="/node_modules/material-design-lite/material.min.css">
+  <script src="/node_modules/material-design-lite/material.min.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <meta charset="utf-8">
   <title>Muralme</title>
   <base href="/">
