add and fix select menu for pipe

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+  <link rel="stylesheet" href="./bower_components/mdl-selectfield/dist/mdl-selectfield.min.css">
+  <script src="./bower_components/mdl-selectfield/dist/mdl-selectfield.min.js"></script>
   <link rel="stylesheet" href="/node_modules/material-design-lite/material.min.css">
   <script src="/node_modules/material-design-lite/material.min.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
