--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">  
   <link rel="stylesheet" href="./bower_components/mdl-selectfield/dist/mdl-selectfield.min.css">
   <script src="./bower_components/mdl-selectfield/dist/mdl-selectfield.min.js"></script>
   <link rel="stylesheet" href="/node_modules/material-design-lite/material.min.css">
