--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,14 @@
 <!doctype html>
 <html>
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">  
+  <!-- Compiled and minified CSS -->
+ <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css">
+
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script> -->
+
+
+
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
   <link rel="stylesheet" href="./bower_components/mdl-selectfield/dist/mdl-selectfield.min.css">
   <script src="./bower_components/mdl-selectfield/dist/mdl-selectfield.min.js"></script>
   <link rel="stylesheet" href="/node_modules/material-design-lite/material.min.css">
